# OSControlSystem

./: .gitignore  Cargo.toml  build.rs  rustfmt.toml
.cargo/: config.toml
python/: mediapipe-requirements.txt
scripts/: install-mediapipe.ps1  sign-release.ps1
src/: gesture_os_control.rs  main.rs
src/adapters/: mod.rs
src/adapters/input/: image_stream_adapter.rs  mod.rs  ui_controller_adapter.rs  video_device_query.rs  webcam_adapter.rs  windows_foreground_window_adapter.rs
src/adapters/output/: file_logger_adapter.rs  linux_os_adapter.rs  mod.rs  toml_config_adapter.rs  windows_os_adapter.rs
src/application/: mod.rs
src/application/dto/: command_result_dto.rs  frame_dto.rs  gesture_debug_dto.rs  gesture_result_dto.rs  mod.rs
src/application/use_cases/: execute_command_use_case.rs  manage_session_use_case.rs  mod.rs  process_frame_use_case.rs  recognize_gesture_use_case.rs
src/domain/: mod.rs
src/domain/entities/: command.rs  context.rs  gesture.rs  gesture_backend.rs  landmark.rs  mod.rs  session_state.rs
src/domain/services/: command_mapper.rs  context_resolver.rs  face_exclusion.rs  gesture_classifier.rs  mod.rs  opencv_skin_mask.rs  safety_guard.rs  temporal_filter.rs
src/domain/value_objects/: confidence.rs  gesture_id.rs  mod.rs  (+1 more)
src/infrastructure/: app_settings_io.rs  app_state.rs  context_rules_io.rs  event_bus.rs  gesture_backend.rs  gesture_bindings_io.rs  gesture_camera_service.rs  mediapipe_hands_helper.py  mod.rs  threading.rs
src/presentation/: bindings_tab.rs  calibration_view.rs  gesture_app.rs  gesture_view_model.rs  main_window.rs  mod.rs  settings_tab.rs  video_tab.rs
windows/: app.manifest
(+10 files in other folders)
