[package]
name = "OSControlAssistant"
version = "0.1.0"
edition = "2024"

[build-dependencies]
winres = "0.1"

[features]
default = []
## Сегментация кожи и предобработка кадра через OpenCV (нужны библиотеки OpenCV в системе, см. https://github.com/twistedfall/opencv-rust )
opencv = ["dep:opencv"]

[dependencies]
eframe = "0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# default-features = false отключает decoding/mjpeg → mozjpeg-sys (часто падает на cl без NASM)
nokhwa = { version = "0.10.10", default-features = false, features = ["input-native"] }
opencv = { version = "0.93", optional = true, default-features = false, features = ["imgproc"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
